# AutoWallpaper

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: archive.rs  config.rs  download.rs  logger.rs  main.rs  wallpaper.rs  watermark.rs
