[package]
name = "auto-wallpaper"
version = "1.0.0"
edition = "2021"

[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0